Bug fix: remove secs on mobile

--- a/src/Components/Countdown/Countdown.css
+++ b/src/Components/Countdown/Countdown.css
@@ -18,7 +18,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .sec {
+    .secs {
         display: none;
     }
 }
